# ubuntu-disk-toolkit

./: .gitignore  .simplecov  README.md  TESTING_RELIABILITY_ANALYSIS.md  justfile  pyproject.toml  pytest.ini  todo.txt  이현주교수님.md  홍진혁교수님.md
config/: defaults.conf
docs/: API_REFERENCE.md  ARCHITECTURE.md  FEATURES.md  MIGRATION_GUIDE.md
install/: install-deps.sh  install.sh  uninstall.sh
lib/: common.sh  disk-api.sh  disk-functions.sh  fail-safe.sh  fstab-api.sh  fstab-functions.sh  id-resolver.sh  raid-api.sh  raid-functions.sh  system-functions.sh  ui-functions.sh  validator.sh
scripts/: build_binary.py  coverage-test.sh  install.sh  install_hooks.py  setup.sh  setup_all.sh
src/raid_cli/: __init__.py  cli.py  raid_manager.py
src/ubuntu_raid_cli/: cli.py  main.py  raid_manager.py  utils.py
tests/: run-tests.sh  test_api_integration.bats  test_common.bats  test_disk.bats  test_fstab.bats  test_helpers.bash  test_integration.bats  test_real_environment.bats  test_system.bats
