[project]
name = "ubuntu-raid-cli"
version = "0.1.1"
description = "Ubuntu RAID 설정을 위한 CLI 도구"
authors = [{ name = "devcomfort", email = "im@devcomfort.me" }]
dependencies = [
    "click>=8.1.8",
    "rich>=13.9.4",
    "psutil>=5.9.0",  # 디스크 정보 확인용
    "pyinstaller>=6.5.0",  # 바이너리 빌드용
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
raid = "ubuntu_raid_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ubuntu_raid_cli"]
editable = true

# 사용자 정의 명령 추가
[tool.rye.scripts]
build = { call = "scripts.build_binary:main" }

[tool.hatch.build.hooks.custom]
path = "scripts/install_hooks.py"
